--- a/src/pug/includes/footer.pug
+++ b/src/pug/includes/footer.pug
@@ -5,17 +5,17 @@ footer.border-top
             .col-md-10.col-lg-8.col-xl-7
                 ul.list-inline.text-center
                     li.list-inline-item
-                        a(href='#!')
+                        a(href='https://www.instagram.com/artclub_hkusu/')
                             span.fa-stack.fa-lg
                                 i.fas.fa-circle.fa-stack-2x
-                                i.fab.fa-twitter.fa-stack-1x.fa-inverse
+                                i.fab.fa-instagram.fa-stack-1x.fa-inverse
                     li.list-inline-item
-                        a(href='#!')
+                        a(href='https://www.facebook.com/hkusu.artclub/')
                             span.fa-stack.fa-lg
                                 i.fas.fa-circle.fa-stack-2x
                                 i.fab.fa-facebook-f.fa-stack-1x.fa-inverse
                     li.list-inline-item
-                        a(href='#!')
+                        a(href='https://github.com/artclubhkusu')
                             span.fa-stack.fa-lg
                                 i.fas.fa-circle.fa-stack-2x
                                 i.fab.fa-github.fa-stack-1x.fa-inverse
