--- a/src/pug/includes/navbar.pug
+++ b/src/pug/includes/navbar.pug
@@ -1,7 +1,7 @@
 // Navigation
 nav#mainNav.navbar.navbar-expand-lg.navbar-light
     .container.px-4.px-lg-5
-        a.navbar-brand(href='index.html') Start Bootstrap
+        a.navbar-brand(href='index.html') Art Club
         button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
             | Menu
             i.fas.fa-bars
@@ -12,6 +12,6 @@ nav#mainNav.navbar.navbar-expand-lg.navbar-light
                 li.nav-item
                     a.nav-link.px-lg-3.py-3.py-lg-4(href='about.html') About
                 li.nav-item
-                    a.nav-link.px-lg-3.py-3.py-lg-4(href='post.html') Sample Post
+                    a.nav-link.px-lg-3.py-3.py-lg-4(href='post.html') Events
                 li.nav-item
                     a.nav-link.px-lg-3.py-3.py-lg-4(href='contact.html') Contact
