--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,9 +8,9 @@ html(lang='en')
         meta(name='description', content='')
         meta(name='author', content='')
 
-        title Clean Blog - Start Bootstrap Theme
+        title Art Club HKUSU
 
-        link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
+        link(rel='icon', type='image/x-icon', href='assets/logo.png')
 
         include includes/css.pug
 
@@ -19,13 +19,13 @@ html(lang='en')
         include includes/navbar.pug
 
         // Page Header
-        header.masthead(style="background-image: url('assets/img/home-bg.jpg')")
+        header.masthead(style="background-image: url('assets/img/group_banner.jpeg')")
             .container.position-relative.px-4.px-lg-5
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-md-10.col-lg-8.col-xl-7
                         .site-heading
-                            h1 Clean Blog
-                            span.subheading A Blog Theme by Start Bootstrap
+                            h1 Art Cub HKUSU
+                            span.subheading 香港大學學生會美術學會
 
         // Main Content
         .container.px-4.px-lg-5
@@ -34,65 +34,65 @@ html(lang='en')
 
                     // Post preview
                     .post-preview
-                        a(href='post.html')
+                        a(href='post-iridescence.html')
                             h2.post-title
-                                | Man must explore, and this is exploration at its greatest
+                                | Art Club Iridescence
                             h3.post-subtitle
-                                | Problems look mighty small from 150 miles up
+                                | Meet the 2021-2022 Session Committee Members
                         p.post-meta
                             | Posted by
-                            a(href='#!') Start Bootstrap
-                            | on September 24, 2021
+                            a(href='about.html') Art Club
+                            | on August 4, 2021
                     
                     // Divider
                     hr.my-4
 
-                    // Post preview
-                    .post-preview
-                        a(href='post.html')
-                            h2.post-title
-                                | I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.
-                        p.post-meta
-                            | Posted by
-                            a(href='#!') Start Bootstrap
-                            | on September 18, 2021
+                    //- // Post preview
+                    //- .post-preview
+                    //-     a(href='post.html')
+                    //-         h2.post-title
+                    //-             | I believe every human has a finite number of heartbeats. I don't intend to waste any of mine.
+                    //-     p.post-meta
+                    //-         | Posted by
+                    //-         a(href='#!') Start Bootstrap
+                    //-         | on September 18, 2021
                     
-                    // Divider
-                    hr.my-4
+                    //- // Divider
+                    //- hr.my-4
 
-                    // Post preview
-                    .post-preview
-                        a(href='post.html')
-                            h2.post-title
-                                | Science has not yet mastered prophecy
-                            h3.post-subtitle
-                                | We predict too much for the next year and yet far too little for the next ten.
-                        p.post-meta
-                            | Posted by
-                            a(href='#!') Start Bootstrap
-                            | on August 24, 2021
+                    //- // Post preview
+                    //- .post-preview
+                    //-     a(href='post.html')
+                    //-         h2.post-title
+                    //-             | Science has not yet mastered prophecy
+                    //-         h3.post-subtitle
+                    //-             | We predict too much for the next year and yet far too little for the next ten.
+                    //-     p.post-meta
+                    //-         | Posted by
+                    //-         a(href='#!') Start Bootstrap
+                    //-         | on August 24, 2021
 
-                    // Divider
-                    hr.my-4
+                    //- // Divider
+                    //- hr.my-4
 
-                    // Post preview
-                    .post-preview
-                        a(href='post.html')
-                            h2.post-title
-                                | Failure is not an option
-                            h3.post-subtitle
-                                | Many say exploration is part of our destiny, but it’s actually our duty to future generations.
-                        p.post-meta
-                            | Posted by
-                            a(href='#!') Start Bootstrap
-                            | on July 8, 2021
+                    //- // Post preview
+                    //- .post-preview
+                    //-     a(href='post.html')
+                    //-         h2.post-title
+                    //-             | Failure is not an option
+                    //-         h3.post-subtitle
+                    //-             | Many say exploration is part of our destiny, but it’s actually our duty to future generations.
+                    //-     p.post-meta
+                    //-         | Posted by
+                    //-         a(href='#!') Start Bootstrap
+                    //-         | on July 8, 2021
                     
-                    // Divider
-                    hr.my-4
+                    //- // Divider
+                    //- hr.my-4
 
-                    // Pager
-                    .d-flex.justify-content-end.mb-4
-                        a.btn.btn-primary.text-uppercase(href='#!') Older Posts →
+                    //- // Pager
+                    //- .d-flex.justify-content-end.mb-4
+                    //-     a.btn.btn-primary.text-uppercase(href='#!') Older Posts →
         
         include includes/footer.pug
 
