added timeline and gallery

--- a/src/pug/includes/footer.pug
+++ b/src/pug/includes/footer.pug
@@ -19,4 +19,10 @@ footer.border-top
                             span.fa-stack.fa-lg
                                 i.fas.fa-circle.fa-stack-2x
                                 i.fab.fa-github.fa-stack-1x.fa-inverse
+                    li.list-inline-item
+                        a(href='mailto:artclubhkusu@gmail.com')
+                            span.fa-stack.fa-lg
+                                i.fas.fa-circle.fa-stack-2x
+                                i.fa.fa-envelope.fa-stack-1x.fa-inverse
+
                 .small.text-center.text-muted.fst-italic Copyright &copy; Art Club, HKUSU 2021
