--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -20,3 +20,5 @@
 @import './sections/footer';
 @import './sections/masthead';
 @import './sections/post';
+@import './sections/events';
+@import './sections/gallery';
