--- a/src/pug/includes/navbar.pug
+++ b/src/pug/includes/navbar.pug
@@ -12,6 +12,8 @@ nav#mainNav.navbar.navbar-expand-lg.navbar-light
                 li.nav-item
                     a.nav-link.px-lg-3.py-3.py-lg-4(href='about.html') About
                 li.nav-item
-                    a.nav-link.px-lg-3.py-3.py-lg-4(href='post.html') Events
+                    a.nav-link.px-lg-3.py-3.py-lg-4(href='events.html') Events
+                li.nav-item
+                    a.nav-link.px-lg-3.py-3.py-lg-4(href='gallery.html') Gallery
                 li.nav-item
                     a.nav-link.px-lg-3.py-3.py-lg-4(href='contact.html') Contact
