finalized post page and banners

--- a/src/pug/contact.pug
+++ b/src/pug/contact.pug
@@ -31,7 +31,17 @@ html(lang='en')
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-md-10.col-lg-8.col-xl-7
                         p
-                            | Want to get in touch? Contact us with any of our contact information below or visit us at the Art Studio!
+                            | Register as art club member
+                        a.centerize(href='https://www.youtube.com/watch?v=dQw4w9WgXcQ')
+                            button.btn.btn-primary.text-uppercase Signup
+                
+                br
+                .row.gx-4.gx-lg-5.justify-content-center
+                    .col-md-10.col-lg-8.col-xl-7
+                        h3 
+                            | Get in touch
+                        p
+                            | Contact us with any of our contact information below or visit us at the Art Studio!
 
                 .row.gx-4.gx-lg-5.justify-content-center
                     ul.list-inline.text-center
