--- a/src/pug/gallery.pug
+++ b/src/pug/gallery.pug
@@ -19,7 +19,7 @@ html(lang='en')
         include includes/navbar.pug
 
         // Page Header
-        header.masthead(style="background-image: url('assets/img/about-bg.jpg')")
+        header.masthead(style="background-image: url('assets/img/gallery-bg.jpg')")
             .container.position-relative.px-4.px-lg-5
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-md-10.col-lg-8.col-xl-7
