--- a/src/pug/includes/images.pug
+++ b/src/pug/includes/images.pug
@@ -14,11 +14,11 @@
 		        "children": [
 		            {
 		                "type": "file",
-		                "name": "about-bg.jpg"
+		                "name": "directions.png"
 		            },
 		            {
 		                "type": "file",
-		                "name": "banner.jpg"
+		                "name": "about-bg.jpg"
 		            },
 		            {
 		                "type": "file",
@@ -26,19 +26,23 @@
 		            },
 		            {
 		                "type": "file",
-		                "name": "directions.png"
-		            },
-		            {
-		                "type": "file",
 		                "name": "events-bg.jpg"
 		            },
 		            {
 		                "type": "file",
-		                "name": "home-bg.jpg"
+		                "name": "brushes2.jpg"
 		            },
 		            {
 		                "type": "file",
-		                "name": "index_cover.jpg"
+		                "name": "gallery-bg.jpg"
+		            },
+		            {
+		                "type": "file",
+		                "name": "index-bg.jpg"
+		            },
+		            {
+		                "type": "file",
+		                "name": "post-bg.jpg"
 		            }
 		        ]
 		    },
@@ -47,12 +51,12 @@
 		        "type": "folder",
 		        "children": [
 		            {
-		                "name": "1-reg-day",
+		                "name": "1-art-jam-thursday",
 		                "type": "folder",
 		                "children": [
 		                    {
 		                        "type": "file",
-		                        "name": "group.jpg"
+		                        "name": "poster.png"
 		                    }
 		                ]
 		            },
@@ -62,19 +66,19 @@
 		                "children": [
 		                    {
 		                        "type": "file",
-		                        "name": "Angie.png"
-		                    },
-		                    {
-		                        "type": "file",
 		                        "name": "Crystal.png"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "group_banner.jpeg"
+		                        "name": "Angie.png"
 		                    },
 		                    {
 		                        "type": "file",
 		                        "name": "Iris.png"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "group.jpg"
 		                    },
 		                    {
 		                        "type": "file",
