--- a/src/pug/includes/posts-data.pug
+++ b/src/pug/includes/posts-data.pug
@@ -1,13 +1,25 @@
 - 
     var posts = [
             {
-                link: "post-reg-day",
-                title: "Registration Day",
-                date: "August 4, 2021",
-                eventDate: "15 Aug - 17 Aug",
-                imgDir: "1-reg-day",
-                banner: "group.jpg",
-                content: ["[Insert content here]"],
+                link: "post-art-jam-thursday",
+                title: "Art Jam Thursday",
+                date: "August 5, 2021",
+                eventDate: "2 Sep",
+                imgDir: "1-art-jam-thursday",
+                poster: "poster.png",
+                content: [
+                    "致各港大同學：",
+                    "藝術學會將會在每星期四開放Art Studio舉行Art Jam Thursday。 會員可以利用學會提供的一系列畫具及美術用品，在Studio繪出屬於自己的畫作及藝術作品，自由發揮及創作。",
+                    "時間：2:00 pm – 6:00 pm",
+                    "日期：每個星期四",
+                    "地點：方樹泉文娛中心, B01, Art Studio",
+                    "",
+                    "To all HKU students",
+                    "Join us in Art Studio every Thursday at Art Jam Thursday where you can create any artwork you can imagine, with a variety of art supplies provided by art club at your disposal.",
+                    "Time: 2:00 pm – 6:00 pm",
+                    "Date: Every Thursday",
+                    "Venue: Art Studio, B01, Fong Shu Chuen Amenities Centre",
+                ],
             },
             {
                 link: "post-iridescence",
@@ -16,7 +28,7 @@
                 date: "August 4, 2021",
                 eventDate: "25 July",
                 imgDir: "0-iridescence",
-                banner: "group_banner.jpeg",
+                banner: "group.jpg",
                 content: [
                     "突發新聞",
                     "𝟸𝟶𝟸𝟷至𝟸𝟶𝟸𝟸年度香港大學學生會美術學會 🌈𝐼𝑟𝑖𝑑𝑒𝑠𝑐𝑒𝑛𝑐𝑒🌈 正式上線啦～",
@@ -26,5 +38,7 @@
                     "❦ We hope that all of you can actively participate in our upcoming workshops and support Art Club as usual~.",
                     "❦ Can’t wait to meet you all in the Art Studio!!! (๑❛ᴗ❛๑)۶♥",
                 ],
+                signupMessage: "Register As Member Now!",
+                signupLink: 'https://www.youtube.com/watch?v=dQw4w9WgXcQ',
             },
         ]
