added subtitle for art jam thursday

--- a/src/pug/includes/posts-data.pug
+++ b/src/pug/includes/posts-data.pug
@@ -2,6 +2,7 @@
     var posts = [
             {
                 link: "post-art-jam-thursday",
+                subtitle: "Join us every Thursday at Art Studio at Art Jam Thursday",
                 title: "Art Jam Thursday",
                 date: "August 5, 2021",
                 eventDate: "2 Sep",
