--- a/src/pug/includes/navbar.pug
+++ b/src/pug/includes/navbar.pug
@@ -1,7 +1,7 @@
 // Navigation
 nav#mainNav.navbar.navbar-expand-lg.navbar-light
     .container.px-4.px-lg-5
-        a.navbar-brand(href='index.html') Art Club
+        a.navbar-brand(href='index.html') ART CLUB, HKUSU
         button.navbar-toggler(type='button', data-bs-toggle='collapse', data-bs-target='#navbarResponsive', aria-controls='navbarResponsive', aria-expanded='false', aria-label='Toggle navigation')
             | Menu
             i.fas.fa-bars
