added subheader to index page

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -32,6 +32,11 @@ html(lang='en')
         // Main Content
         .container.px-4.px-lg-5
             .row.gx-4.gx-lg-5.justify-content-center
+                    .col-md-10.col-lg-8.col-xl-7
+                        h3 News & Upcoming Events
+                        hr.my-4
+                        
+            .row.gx-4.gx-lg-5.justify-content-center
                 .col-md-10.col-lg-8.col-xl-7
 
                     each post in posts
