removed signup button

--- a/src/pug/includes/posts-data.pug
+++ b/src/pug/includes/posts-data.pug
@@ -39,7 +39,7 @@
                     "❦ We hope that all of you can actively participate in our upcoming workshops and support Art Club as usual~.",
                     "❦ Can’t wait to meet you all in the Art Studio!!! (๑❛ᴗ❛๑)۶♥",
                 ],
-                signupMessage: "Register As Member Now!",
-                signupLink: 'https://www.youtube.com/watch?v=dQw4w9WgXcQ',
+                //- signupMessage: "Register As Member Now!",
+                //- signupLink: 'https://www.youtube.com/watch?v=dQw4w9WgXcQ',
             },
         ]
