--- a/src/pug/contact.pug
+++ b/src/pug/contact.pug
@@ -28,14 +28,15 @@ html(lang='en')
         // Main Content
         main.mb-4
             .container.px-4.px-lg-5
-                .row.gx-4.gx-lg-5.justify-content-center
-                    .col-md-10.col-lg-8.col-xl-7
-                        p
-                            | Register as art club member
-                        a.centerize(href='https://www.youtube.com/watch?v=dQw4w9WgXcQ')
-                            button.btn.btn-primary.text-uppercase Signup
+                //- .row.gx-4.gx-lg-5.justify-content-center
+                //-     .col-md-10.col-lg-8.col-xl-7
+                //-         p
+                //-             | Register as art club member
+                //-         a.centerize(href='https://www.youtube.com/watch?v=dQw4w9WgXcQ')
+                //-             button.btn.btn-primary.text-uppercase Signup
                 
-                br
+                //- br
+
                 .row.gx-4.gx-lg-5.justify-content-center
                     .col-md-10.col-lg-8.col-xl-7
                         h3 
