updated Art Jam Thursday

--- a/src/pug/includes/posts-data.pug
+++ b/src/pug/includes/posts-data.pug
@@ -9,17 +9,21 @@
                 imgDir: "1-art-jam-thursday",
                 poster: "poster.png",
                 content: [
-                    "致各港大同學：",
-                    "藝術學會將會在每星期四開放Art Studio舉行Art Jam Thursday。 會員可以利用學會提供的一系列畫具及美術用品，在Studio繪出屬於自己的畫作及藝術作品，自由發揮及創作。",
+                    "成日留喺屋企唔知道可以做啲乜嘢？除咗打機、煲劇、讀書之外，已經唔知道可以做啲乜？唔緊要！Art Club 幫到你！！",
+                    "嚟緊我哋藝術學會將會逢星期四舉行Art Jam Thursday！會員可以利用學會提供一系列嘅畫具同埋美術用品",
+                    "起Art Studio，你唔單止可以休閒舒適地繪出屬於自己獨一無二嘅畫作同埋藝術作品，而且你仲可以自由發揮！鍾意畫咩都得！",
                     "時間：2:00 pm – 6:00 pm",
-                    "日期：每個星期四",
+                    "日期：逢星期四，9月2日開始 （大學假期及公衆假期除外）",
                     "地點：方樹泉文娛中心, B01, Art Studio",
+                    "咁正嘅活動你唔係唔參加呀嘛？好期待可以逢星期四見到大家！",
                     "",
-                    "To all HKU students",
-                    "Join us in Art Studio every Thursday at Art Jam Thursday where you can create any artwork you can imagine, with a variety of art supplies provided by art club at your disposal.",
+                    "Are you stuck at home all day with nothing to do? Other than countless hours of gaming, tv and studying, are you looking for something more interesting, exciting, and new? Well, worry no more! Your search stops here, at Art Club!! ",
+                    "Coming soon, Art Jam Thursday will take place at the Art Studio every Thursday!!Members can enjoy a series of abundant art supplies provided by Art Club and the Art Studio.",
+                    "At art studio, not only can you create artwork that are uniquely ours, but you can also let your imagination run wild, create whatever you can think of. And you can do all that at the comfortable environment of the Art Studio!",
                     "Time: 2:00 pm – 6:00 pm",
-                    "Date: Every Thursday",
+                    "Date: Every Thursday starting on 2 September (except HKU holidays and public holidays)",
                     "Venue: Art Studio, B01, Fong Shu Chuen Amenities Centre",
+                    "Such an exciting event, what are you still waiting for? Can’t wait to see all of you every Thursday! ",
                 ],
             },
             {
