fixed gallery bug, finally this time

--- a/src/pug/includes/posts-data.pug
+++ b/src/pug/includes/posts-data.pug
@@ -16,6 +16,8 @@
                     "日期：逢星期四，9月2日開始 （大學假期及公衆假期除外）",
                     "地點：方樹泉文娛中心, B01, Art Studio",
                     "咁正嘅活動你唔係唔參加呀嘛？好期待可以逢星期四見到大家！",
+                    "* 會員可以先到先得形式參與活動",
+                    "** 非會員可即場登記成爲會員",
                     "",
                     "Are you stuck at home all day with nothing to do? Other than countless hours of gaming, tv and studying, are you looking for something more interesting, exciting, and new? Well, worry no more! Your search stops here, at Art Club!! ",
                     "Coming soon, Art Jam Thursday will take place at the Art Studio every Thursday!!Members can enjoy a series of abundant art supplies provided by Art Club and the Art Studio.",
@@ -24,6 +26,8 @@
                     "Date: Every Thursday starting on 2 September (except HKU holidays and public holidays)",
                     "Venue: Art Studio, B01, Fong Shu Chuen Amenities Centre",
                     "Such an exciting event, what are you still waiting for? Can’t wait to see all of you every Thursday! ",
+                    "* Members can join on a first come first serve basis",
+                    "** Non-members can register as new member upon arrival",
                 ],
             },
             {
@@ -34,6 +38,7 @@
                 eventDate: "25 July",
                 imgDir: "0-iridescence",
                 banner: "group.jpg",
+                //- poster: "poster.png"
                 content: [
                     "突發新聞",
                     "𝟸𝟶𝟸𝟷至𝟸𝟶𝟸𝟸年度香港大學學生會美術學會 🌈𝐼𝑟𝑖𝑑𝑒𝑠𝑐𝑒𝑛𝑐𝑒🌈 正式上線啦～",
