changed new banner for events page

--- a/src/pug/includes/images.pug
+++ b/src/pug/includes/images.pug
@@ -9,6 +9,16 @@
 		        "name": "logo.png"
 		    },
 		    {
+		        "name": "studio",
+		        "type": "folder",
+		        "children": [
+		            {
+		                "type": "file",
+		                "name": "reg-day-banner.jpg"
+		            }
+		        ]
+		    },
+		    {
 		        "name": "img",
 		        "type": "folder",
 		        "children": [
@@ -22,15 +32,15 @@
 		            },
 		            {
 		                "type": "file",
-		                "name": "events-bg.jpg"
-		            },
-		            {
-		                "type": "file",
 		                "name": "contact-bg.jpg"
 		            },
 		            {
 		                "type": "file",
 		                "name": "directions.png"
+		            },
+		            {
+		                "type": "file",
+		                "name": "events-bg.jpg"
 		            },
 		            {
 		                "type": "file",
@@ -42,6 +52,10 @@
 		            },
 		            {
 		                "type": "file",
+		                "name": "_events-bg.jpg"
+		            },
+		            {
+		                "type": "file",
 		                "name": "post-bg.jpg"
 		            }
 		        ]
@@ -50,16 +64,6 @@
 		        "name": "posts",
 		        "type": "folder",
 		        "children": [
-		            {
-		                "name": "1-art-jam-thursday",
-		                "type": "folder",
-		                "children": [
-		                    {
-		                        "type": "file",
-		                        "name": "poster.png"
-		                    }
-		                ]
-		            },
 		            {
 		                "name": "0-iridescence",
 		                "type": "folder",
@@ -74,7 +78,7 @@
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "Ivan.png"
+		                        "name": "Iris.png"
 		                    },
 		                    {
 		                        "type": "file",
@@ -82,7 +86,7 @@
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "Miriam.png"
+		                        "name": "Ivan.png"
 		                    },
 		                    {
 		                        "type": "file",
@@ -90,15 +94,25 @@
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "Iris.png"
-		                    },
-		                    {
-		                        "type": "file",
-		                        "name": "Victoria.png"
+		                        "name": "Miriam.png"
 		                    },
 		                    {
 		                        "type": "file",
 		                        "name": "Summer.png"
+		                    },
+		                    {
+		                        "type": "file",
+		                        "name": "Victoria.png"
+		                    }
+		                ]
+		            },
+		            {
+		                "name": "1-art-jam-thursday",
+		                "type": "folder",
+		                "children": [
+		                    {
+		                        "type": "file",
+		                        "name": "poster.png"
 		                    }
 		                ]
 		            }
