--- a/src/pug/gallery.pug
+++ b/src/pug/gallery.pug
@@ -12,6 +12,7 @@ html(lang='en')
 
         link(rel='icon', type='image/x-icon', href='assets/logo.png')
 
+        include includes/analytics.pug
         include includes/css.pug
 
     body
