--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -11,7 +11,7 @@ html(lang='en')
         title Art Club HKUSU
 
         link(rel='icon', type='image/x-icon', href='assets/logo.png')
-
+        include includes/analytics.pug
         include includes/css.pug
 
     body
