--- a/src/pug/post-iridescence.pug
+++ b/src/pug/post-iridescence.pug
@@ -19,6 +19,7 @@ html(lang='en')
 
         link(rel='icon', type='image/x-icon', href='assets/logo.png')
 
+        include includes/analytics.pug
         include includes/css.pug
 
     body
