added image to about page

--- a/src/pug/includes/images.pug
+++ b/src/pug/includes/images.pug
@@ -9,16 +9,26 @@
 		        "name": "logo.png"
 		    },
 		    {
+		        "name": "studio",
+		        "type": "folder",
+		        "children": [
+		            {
+		                "type": "file",
+		                "name": "reg-day-banner.jpg"
+		            }
+		        ]
+		    },
+		    {
 		        "name": "img",
 		        "type": "folder",
 		        "children": [
 		            {
 		                "type": "file",
-		                "name": "about-bg.jpg"
+		                "name": "directions.png"
 		            },
 		            {
 		                "type": "file",
-		                "name": "directions.png"
+		                "name": "about-bg.jpg"
 		            },
 		            {
 		                "type": "file",
@@ -26,11 +36,11 @@
 		            },
 		            {
 		                "type": "file",
-		                "name": "events-bg.jpg"
+		                "name": "contact-bg.jpg"
 		            },
 		            {
 		                "type": "file",
-		                "name": "contact-bg.jpg"
+		                "name": "events-bg.jpg"
 		            },
 		            {
 		                "type": "file",
@@ -38,7 +48,7 @@
 		            },
 		            {
 		                "type": "file",
-		                "name": "_events-bg.jpg"
+		                "name": "regday-group.jpg"
 		            },
 		            {
 		                "type": "file",
@@ -46,17 +56,11 @@
 		            },
 		            {
 		                "type": "file",
-		                "name": "post-bg.jpg"
-		            }
-		        ]
-		    },
-		    {
-		        "name": "studio",
-		        "type": "folder",
-		        "children": [
+		                "name": "_events-bg.jpg"
+		            },
 		            {
 		                "type": "file",
-		                "name": "reg-day-banner.jpg"
+		                "name": "post-bg.jpg"
 		            }
 		        ]
 		    },
@@ -80,11 +84,15 @@
 		                "children": [
 		                    {
 		                        "type": "file",
+		                        "name": "Angie.png"
+		                    },
+		                    {
+		                        "type": "file",
 		                        "name": "Crystal.png"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "Angie.png"
+		                        "name": "Iris.png"
 		                    },
 		                    {
 		                        "type": "file",
@@ -96,11 +104,7 @@
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "Iris.png"
-		                    },
-		                    {
-		                        "type": "file",
-		                        "name": "Miriam.png"
+		                        "name": "Summer.png"
 		                    },
 		                    {
 		                        "type": "file",
@@ -108,11 +112,11 @@
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "Summer.png"
+		                        "name": "Victoria.png"
 		                    },
 		                    {
 		                        "type": "file",
-		                        "name": "Victoria.png"
+		                        "name": "Miriam.png"
 		                    }
 		                ]
 		            }
